--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~50.0.8",
     "expo-dev-client": "~3.3.9",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.11",
     "react": "18.2.0",
     "react-native": "0.73.4"
   },
