--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Create preview
         uses: expo/expo-github-action/preview@v8
         with:
-          command: eas update --branch preview
+          command: eas update --auto
