--- a/eas.json
+++ b/eas.json
@@ -9,6 +9,12 @@
       "distribution": "internal",
       "channel": "development"
     },
+    "development-simulator": {
+      "extends": "development",
+      "ios": {
+        "simulator": true
+      }
+    },
     "preview": {
       "distribution": "internal",
       "channel": "preview"
