Update owner field

--- a/app.json
+++ b/app.json
@@ -36,6 +36,7 @@
     },
     "updates": {
       "url": "https://u.expo.dev/4a1c5c31-f9cf-44f7-bc14-da1645fc4201"
-    }
+    },
+    "owner": "third-labs"
   }
 }
