--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.amanhimself.myapp"
@@ -26,17 +28,13 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "extra": {
-      "eas": {
-        "projectId": "4a1c5c31-f9cf-44f7-bc14-da1645fc4201"
-      }
-    },
     "runtimeVersion": {
       "policy": "appVersion"
     },
-    "updates": {
-      "url": "https://u.expo.dev/4a1c5c31-f9cf-44f7-bc14-da1645fc4201"
-    },
-    "owner": "third-labs"
+    "extra": {
+      "eas": {
+        "projectId": "7e903a60-bc51-4636-b43e-d1ff7c3c26a6"
+      }
+    }
   }
 }
